--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,19 @@
         <button class="navbar-toggler border-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i class="bi bi-list"></i>
         </button>
-        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+            
+
+          </ul>
+
+          
+          <!-- {% comment %} <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form> {% endcomment %} -->
+
           {% comment %} login signup {% endcomment %}
           {% if user.is_authenticated %}
           <ul class="navbar-nav mr-2">
@@ -27,6 +39,7 @@
                         <button class="dropdown-item" type="submit">Logout</button>
                     </form>
                     
+                     <a class="dropdown-item" href="{% url 'view_profile' %}">View Profile</a> 
                 </div>
             </li>
         </ul>
@@ -40,7 +53,7 @@
         <button type="button" class="btn btn-danger mr-2" data-toggle="modal" data-target="#singupModal">
             Sing Up
         </button>  
-        
+        {% comment %} <a class="nav-link" type="button" class="btn btn-danger mr-2" href="{% url 'register' %}">Register</a> {% endcomment %}
         {% endif %}
         </div>
       </div>
