--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
                         <input type="password" class="form-control" id="loginpassword" name="loginpassword"
                             placeholder="Enter your password " autocomplete="loginpassword" required>
                     </div>
-
+                    <a href= "{% url 'password_reset' %}">Forget Password?<span class="sr-only">(current)</span></a>
                     <button type="submit" class="btn btn-primary">Submit</button>
                     
                     <a href="" data-toggle="modal" data-target="#singupModal" >Don't Have an Account?<span class="sr-only">(current)</span></a>
