--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="singupModalTitle">SingUp Here</h5>
+                <h5 class="modal-title" id="singupModalTitle">Sign Up</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -14,8 +14,8 @@
             <div class="modal-body">
                 <form action='{% url 'handelSingup' %}' method='post'>
                     <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" placeholder="choos a uniq username">
+                        <label for="rollno">Roll Number</label>
+                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter your roll number">
                       </div>
                     <div class="form-group">
                         <label for="fname">First Name</label>
@@ -44,11 +44,7 @@
                     <div class="form-group">
                         <label for="pass1">Choose Password</label>
                         <input type="password" class="form-control" id="pass1" name="pass1"
-                            placeholder="choose your password" autocomplete="pass1" required>
-                        <small id="unamehelp" class="form-text text-muted px-1">
-                            Your password must be at least 8 and less than 20 characters (must have One Uppercase &
-                            one lower case letters, numbers & amp; underscores allowed) with no spaces
-                        </small>
+                            placeholder="Enter your password" autocomplete="pass1" required>
                     </div>
 
                     <div class="form-group">
@@ -57,7 +53,7 @@
                             placeholder="Enter your password again" autocomplete="pass2" required>
                     </div>
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-primary">SingUp</button>
+                    <button type="submit" class="btn btn-primary">Sign Up</button>
                 </form>
             </div>
             <div class="modal-footer">
