--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link href="{% static "fab/favicon-32x32.png"  %}" rel="shortcut icon" type="image/x-icon"/>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -26,40 +26,49 @@
     <title>{% block title %}{% endblock title %}</title>
   </head>
   <body>
+      <div class="sidenav-container">
+        {% include 'sideNav.html' %}
+      </div>
+      <div class="main-container">
+        {% include 'nav.html' %}
+    
+        <!--End Navbar -->
+        <!-- Profile Block -->
+        {% block profile %}{% endblock profile %}
+      
+        {% if messages %} {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} mb-0 alert-dismissible fade show my-0" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %} {% endif %}
+      
+        <!--Singup Modal -->
+      {% include 'signup.html' %}
+        <!--End Singup Modal -->
+      
+        <!--Login Modal -->
+      {% include 'login.html' %}
+       <!--End Login Modal -->
+    
+    
+      {% block body %}
+      {% endblock body%}
+      
+    <!-- FOOTER -->
+      {% comment %} <footer class="container mt-3 bottom">
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p class="text-center">&copy; 2021-2024 bidnbuild.com &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer> {% endcomment %}
+    
+      {% block custom_js %}
+    
+      {% endblock custom_js %}
+      </div>
     <!--Navbar -->
-    {% include 'nav.html' %}
-    <!--End Navbar -->
-  
-    {% if messages %} {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} mb-0 alert-dismissible fade show my-0" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endfor %} {% endif %}
-  
-    <!--Singup Modal -->
-  {% include 'signup.html' %}
-    <!--End Singup Modal -->
-  
-    <!--Login Modal -->
-  {% include 'login.html' %}
-   <!--End Login Modal -->
-
-
-  {% block body %}
-  {% endblock body%}
-  
-<!-- FOOTER -->
-  {% comment %} <footer class="container mt-3 bottom">
-    <p class="float-right"><a href="#">Back to top</a></p>
-    <p class="text-center">&copy; 2021-2024 bidnbuild.com &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-  </footer> {% endcomment %}
-
-  {% block custom_js %}
-
-  {% endblock custom_js %}
+    
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
