--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="loginModalTitle">Login Here</h5>
+                <h5 class="modal-title" id="loginModalTitle">Login</h5>
                 <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button> -->
@@ -14,7 +14,7 @@
                 <form action='{% url 'handleLogin' %}' method='post'>
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="username">Username(Email ID)</label>
+                        <label for="username">Roll Number</label>
                         <input type="text" class="form-control" id="loginusername" name="loginusername"
                             placeholder="Enter your Email id" autocomplete="loginusername" required>
                     </div>
@@ -24,10 +24,17 @@
                         <input type="password" class="form-control" id="loginpassword" name="loginpassword"
                             placeholder="Enter your password " autocomplete="loginpassword" required>
                     </div>
-                    <a href= "{% url 'password_reset' %}">Forget Password?<span class="sr-only">(current)</span></a>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    
-                    <a href="" data-toggle="modal" data-target="#singupModal" >Don't Have an Account?<span class="sr-only">(current)</span></a>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a class="login-links" href= "{% url 'password_reset' %}">Forgot Password?<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="list-group-item">
+                            <a class="login-links" href="" data-toggle="modal" data-target="#singupModal">Don't Have an Account?<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="list-group-item">
+                            <button type="submit" class="btn btn-primary">Log in</button>
+                        </li>                       
+                    </ul>
                 </form>
             </div>
             
