--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,17 +2,23 @@
 
 
     <!-- -----------------------------------Navbar start----------------------------------- -->
-    <nav class="navbar navbar-expand-lg mb-2">
+    <nav class="navbar navbar-expand-lg mb-2 fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand text-dark" href="/"><strong>Bid N' Build</strong></a>
+        <a class="navbar-brand text-dark" href="/"><strong>NITT</strong></a>
         <button class="navbar-toggler border-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i class="bi bi-list"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-            
-
+          <ul class="nav ms-auto justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Placement Policy</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
           </ul>
 
           
@@ -22,39 +28,7 @@
           </form> {% endcomment %} -->
 
           {% comment %} login signup {% endcomment %}
-          {% if user.is_authenticated %}
-          <ul class="navbar-nav mr-2">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Logged in as {{request.user}}
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <form action='{% url 'handleLogout' %}' method='post'>
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <input type="hidden" name="value">
-                        </div>
-
-                        <button class="dropdown-item" type="submit">Logout</button>
-                    </form>
-                    
-                     <a class="dropdown-item" href="{% url 'view_profile' %}">View Profile</a> 
-                </div>
-            </li>
-        </ul>
-
-        {% else %}
-        <!-- Button to trigger login modal -->
-       <button type="button" class="btn btn-warning mr-2" data-toggle="modal" data-target="#loginModal">
-            Login
-        </button>
-        <!-- Button to trigger singup modal -->
-        <button type="button" class="btn btn-danger mr-2" data-toggle="modal" data-target="#singupModal">
-            Sing Up
-        </button>  
-        {% comment %} <a class="nav-link" type="button" class="btn btn-danger mr-2" href="{% url 'register' %}">Register</a> {% endcomment %}
-        {% endif %}
+    
         </div>
       </div>
   </nav>
