--- a/static/css/style.css
+++ b/static/css/style.css
@@ -210,3 +210,14 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0; 
 } */
+
+.login-btns {
+    list-style: none;
+    text-align: left;
+    padding-left: 0;
+}
+
+.login-btns-items {
+    text-decoration: none;
+    padding: 1rem 0;
+}
