--- a/templates/sideNav.html
+++ b/templates/sideNav.html
@@ -18,7 +18,7 @@
           Sign Up
         </button>
       </ul>
-      <li class="sidenav-list-item"><i class="bi bi-person-fill"></i> <a href="#" class="dash-link">Profile</a></li>
+      <li class="sidenav-list-item"><i class="bi bi-person-fill"></i> <a href= "{% url 'viewStudentProfile' %}" class="dash-link">Profile</a></li>
       <li class="sidenav-list-item"><i class="bi bi-cloud-upload"></i> <a href="#" class="dash-link">Update Resume</a>
       </li>
       <li class="sidenav-list-item"><i class="bi bi-list-ul"></i> <a href="#" class="dash-link">Companies</a></li>
