--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 
 {% load static %}
 
-<div class="modal fade" id="singupModal" tabindex="-1" role="dialog" aria-labelledby="singupModal"
+<div class="modal fade" id="singupModal" role="dialog" aria-labelledby="singupModal"
     aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
