--- a/templates/base.html
+++ b/templates/base.html
@@ -37,11 +37,10 @@
         {% block profile %}{% endblock profile %}
       
         {% if messages %} {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} mb-0 alert-dismissible fade show my-0" role="alert">
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+      
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          <strong>{{ message }}</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {% endfor %} {% endif %}
       
