--- a/templates/sideNav.html
+++ b/templates/sideNav.html
@@ -1,29 +1,28 @@
-<div class="offcanvas offcanvas-start show" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel"
-  data-bs-backdrop="false">
-  <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasLabel">Student</h5>
+<div class="custom">
+  <div class="custom-header">
+    <h5 class="custom-title" id="offcanvasLabel">Student</h5>
   </div>
-  <div class="offcanvas-body">
-    <ul class="sidenav-list">
+  <div class="custom-body">
       {% if user.is_authenticated %}
-    <li class="sidenav-list-item"><i class="bi bi-person-fill"></i> <a href= "{% url 'viewStudentProfile' %}" class="dash-link">Profile</a></li>
-    <li class="sidenav-list-item"><i class="bi bi-cloud-upload"></i> <a href="#" class="dash-link">Update Resume</a>
-    </li>
-    <li class="sidenav-list-item"><i class="bi bi-list-ul"></i> <a href="#" class="dash-link">Companies</a></li>
-    <li class="sidenav-list-item"><i class="bi bi-key-fill"></i> <a href="#" class="dash-link">Change Password</a>   </li>
-    <ul class="login-btns">
-      <li class="sidenav-list-item"> <a class="dash-link">
-        <form action='{% url 'handleLogout' %}' method='post'>
-          {% csrf_token %}
-          <div class="form-group">
-              <input type="hidden" name="value">
-          </div>
+      <ul class="sidenav-list">
+        <li class="sidenav-list-item"><i class="bi bi-person-fill"></i> <a href= "{% url 'viewStudentProfile' %}" class="dash-link">Profile</a></li>
+        <li class="sidenav-list-item"><i class="bi bi-cloud-upload"></i> <a href="{% url 'updateResume' %}" class="dash-link">Update Resume</a>
+        </li>
+        <li class="sidenav-list-item"><i class="bi bi-list-ul"></i> <a href="{% url 'companies' %}" class="dash-link">Companies</a></li>
+        <li class="sidenav-list-item"><i class="bi bi-key-fill"></i> <a href="{% url 'changePassword' %}" class="dash-link">Change Password</a>   </li>
+        <ul class="login-btns">
+          <li class="sidenav-list-item"> <a class="dash-link">
+            <form action='{% url 'handleLogout' %}' method='post'>
+              {% csrf_token %}
+              <div class="form-group">
+                  <input type="hidden" name="value">
+              </div>
 
-          <button class="dropdown-item" type="submit"><i class="bi bi-power" style="margin-right:10px;"></i>Logout</button>
-      </form>
-      </a></li>
-    </ul>
-  </ul>
+              <button class="dropdown-item" type="submit"><i class="bi bi-power" style="margin-right:10px;"></i>Logout</button>
+          </form>
+          </a></li>
+        </ul>
+      </ul>
       {% else %}
       <!-- Button to trigger login modal -->
       <ul class="login-btns">
@@ -39,14 +38,10 @@
             Sign up
           </button>
         </li>
-        
+      </ul>
 
-      
-
-      
       {% comment %} <a class="nav-link" type="button" class="btn btn-danger mr-2"
         href="{% url 'register' %}">Register</a> {% endcomment %}
       {% endif %}
-    </ul>
   </div>
 </div>
