Updated profile & accounts working properly

--- a/templates/sideNav.html
+++ b/templates/sideNav.html
@@ -5,10 +5,13 @@
   <div class="custom-body">
       {% if user.is_authenticated %}
       <ul class="sidenav-list">
-        <li class="sidenav-list-item"><i class="bi bi-person-fill"></i> <a href= "#" class="dash-link">Profile</a></li>
-        <li class="sidenav-list-item"><i class="bi bi-cloud-upload"></i> <a href="#" class="dash-link">Update Resume</a>
+        <li class="sidenav-list-item"><i class="bi bi-person-fill"></i> <a href= "{% url 'viewStudentProfile' %}" class="dash-link">Profile</a></li>
+        <li class="sidenav-list-item"><i class="bi bi-cloud-upload"></i> <a href="{% url 'updateResume' %}" class="dash-link">Update Resume</a>
         </li>
-        <li class="sidenav-list-item"><i class="bi bi-list-ul"></i> <a href="#" class="dash-link">Companies</a></li>
+        <li class="sidenav-list-item"><i class="bi bi-list-ul"></i> <a href="{% url 'companies' %}" class="dash-link">Companies</a></li>
+        {% if user.student.isPR %}
+        <li class="sidenav-list-item"><i class="bi bi-list-ul"></i> <a href="{% url 'addCompany' %}" class="dash-link">Add Companies</a></li>
+        {% endif %}
         <li class="sidenav-list-item"><i class="bi bi-key-fill"></i> <a href="#" class="dash-link">Change Password</a>   </li>
         <ul class="login-btns">
           <li class="sidenav-list-item"> <a class="dash-link">
