--- a/templates/student/resume.html
+++ b/templates/student/resume.html
@@ -4,9 +4,11 @@
 
 {% block body %}
     <div class="container-fluid p-3 fs-6">
-        <form action="POST">
+        <form action="{% url 'updateResume' %}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
             <label class="form-label">Upload Resume:</label>
             <input class="form-control" type="file" name="resume" id="resume" />
+            <input class="btn btn-primary form-submit" type="submit" value="Submit">
         </form>
     </div>
 {% endblock body %}
